Conclusão da página de perfil de usuário

--- a/objetosProjeto/mvc/view/css/index.css
+++ b/objetosProjeto/mvc/view/css/index.css
@@ -178,3 +178,12 @@ tr:nth-child(even) {
 .tabelas-usuario button:hover {
     background-color: #0056b3;
 }
+
+.divAdds {
+    display: flex;
+    gap: 40px;
+}
+
+.botaoPlaca{
+    margin-top: 11px;
+}
