Desenvolvimento do front do suporte

--- a/objetosProjeto/mvc/view/css/index.css
+++ b/objetosProjeto/mvc/view/css/index.css
@@ -351,3 +351,8 @@ Estilos tela de pagamento/agendamento
 #pagarDivida:hover {
     background-color: #218838;
 }
+
+/*
+Estilos tela de principal
+*/
+
