--- a/objetosProjeto/mvc/view/css/index.css
+++ b/objetosProjeto/mvc/view/css/index.css
@@ -360,3 +360,20 @@ Estilos tela de pagamento/agendamento
 Estilos tela de principal
 */
 
+/*
+Estilos chat
+*/
+
+.mensagem-usuario {
+    background-color: #d1e7dd;
+    padding: 8px;
+    margin: 5px 0;
+    border-radius: 5px;
+}
+
+.mensagem-ia {
+    background-color: #f8d7da;
+    padding: 8px;
+    margin: 5px 0;
+    border-radius: 5px;
+}
