--- a/objetosProjeto/mvc/view/css/index.css
+++ b/objetosProjeto/mvc/view/css/index.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: cursive;
 }
 
 .desativado {
@@ -363,6 +364,19 @@ Estilos tela de principal
 /*
 Estilos chat
 */
+
+.inputChat {
+    width: 84%;
+    height: 50px;
+}
+
+.botaoChat{
+    width: 15%;
+    height: 50px;
+    background-color: rgb(47, 44, 66);
+    color: white;
+    border-radius: 5px;
+}
 
 .mensagem-usuario {
     background-color: #d1e7dd;
