--- a/app/front/view/css/index.css
+++ b/app/front/view/css/index.css
@@ -240,12 +240,18 @@ Estilos tela de pagamento/agendamento
 */
 
 .divPagamento {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     padding: 20px;
-    background-color: #f9f9f9;
+    background-color: #fff;
     border-radius: 12px;
+    opacity: 1; 
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
     max-width: 400px;
     margin: 30px auto;
+    z-index: 1001;
 }
 .divPagamento input {
     width: 100%;
