--- a/objetosProjeto/mvc/view/administracao.html
+++ b/objetosProjeto/mvc/view/administracao.html
@@ -14,8 +14,7 @@
         <div id="tela_inicial" class="abas_menu_lateral" onclick="abrirTela(event)">Página Inicial</div>
         <div id="excluir_usuario" class="abas_menu_lateral" onclick="abrirTela(event)">Excluir Conta de Usuário</div>
         <div id="verificar_conta" class="abas_menu_lateral" onclick="abrirTela(event)">Verificar Contas</div>
-        <div id="alterar_vagas" class="abas_menu_lateral" onclick="abrirTela(event)">Alterar Vagas Estacionamento</div>
-        <div id="alterar_valor" class="abas_menu_lateral" onclick="abrirTela(event)">Alterar Valor Estacionamento</div>
+        <div id="alterar_vagas" class="abas_menu_lateral" onclick="abrirTela(event)">Gerenciar Vagas</div>
         <div id="banir_placa" class="abas_menu_lateral" onclick="abrirTela(event)">Banir Placas</div>
         <div id="enviar_notificacao" class="abas_menu_lateral" onclick="abrirTela(event)">Enviar Notificações</div>
         <div id="logout" class="abas_menu_lateral" onclick="abrirTela(event)">Logout</div>
