Alterações de apresentação e css administração

--- a/objetosProjeto/mvc/view/administracao.html
+++ b/objetosProjeto/mvc/view/administracao.html
@@ -21,7 +21,8 @@
     </div>
 
     <div id="conteudo">
-        <h1>Bem vindo(a) a página da Administração</h1>
+        <h2>Página Inicial da Administração</h2>
+        <p>Bem-vindo(a) à página de administração do VagaXpress! Escolha uma opção no menu lateral.</p>
     </div>
 </body>
 </html>
