--- a/objetosProjeto/mvc/view/css/index.css
+++ b/objetosProjeto/mvc/view/css/index.css
@@ -374,12 +374,10 @@ h1.info-container{
     background-color: #4e4caf;
     color: #fff;
     padding: 15px;
-    border-radius: 8px;
     margin: 30px 0 20px 0;
 }
 h2 {
     color: #005a99;
-    margin-top: 20px;
 }
 p {
     line-height: 1.6;
@@ -402,14 +400,19 @@ Estilos chat
 .inputChat {
     width: 84%;
     height: 50px;
+    padding: 6px;
+    margin: 5px 0;
+    border-radius: 5px;
 }
 
 .botaoChat{
     width: 15%;
     height: 50px;
+    padding: 6px;
+    margin: 5px 0;
+    border-radius: 5px;
     background-color: rgb(47, 44, 66);
     color: white;
-    border-radius: 5px;
 }
 
 .mensagem-usuario {
