Revert "Merge branch 'main' into inclusao-css-2"
This reverts commit 6e57ed88fd70f37d457fece1af1347217a0263d9, reversing
changes made to fa9776b5988e0ffdd57f2134d790f8eadff7a94a.

--- a/objetosProjeto/mvc/view/administracao.html
+++ b/objetosProjeto/mvc/view/administracao.html
@@ -14,15 +14,15 @@
         <div id="tela_inicial" class="abas_menu_lateral" onclick="abrirTela(event)">Página Inicial</div>
         <div id="excluir_usuario" class="abas_menu_lateral" onclick="abrirTela(event)">Excluir Conta de Usuário</div>
         <div id="verificar_conta" class="abas_menu_lateral" onclick="abrirTela(event)">Verificar Contas</div>
-        <div id="alterar_vagas" class="abas_menu_lateral" onclick="abrirTela(event)">Gerenciar Vagas</div>
+        <div id="alterar_vagas" class="abas_menu_lateral" onclick="abrirTela(event)">Alterar Vagas Estacionamento</div>
+        <div id="alterar_valor" class="abas_menu_lateral" onclick="abrirTela(event)">Alterar Valor Estacionamento</div>
         <div id="banir_placa" class="abas_menu_lateral" onclick="abrirTela(event)">Banir Placas</div>
         <div id="enviar_notificacao" class="abas_menu_lateral" onclick="abrirTela(event)">Enviar Notificações</div>
         <div id="logout" class="abas_menu_lateral" onclick="abrirTela(event)">Logout</div>
     </div>
 
     <div id="conteudo">
-        <h2>Página Inicial da Administração</h2>
-        <p>Bem-vindo(a) à página de administração do VagaXpress! Escolha uma opção no menu lateral.</p>
+        <h1>Bem vindo(a) a página da Administração</h1>
     </div>
 </body>
 </html>
