Correção de "#" no css para background-color

--- a/objetosProjeto/mvc/view/css/index.css
+++ b/objetosProjeto/mvc/view/css/index.css
@@ -446,7 +446,7 @@ p {
 .botaoSuporte {
     margin-top: 25px;
     padding: 12px;
-    background-color: 4e4caf;
+    background-color: #4e4caf;
     color: white;
     border: none;
     border-radius: 8px;
